--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nurkholis &mdash;Salsa </title>
+	<title>Kholis &mdash;Salsa </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -101,7 +101,7 @@
 </style>
 
 <div id="splash-screen">
-  <h1>Nurkholis & Salsa</h1>
+  <h1>Kholis & Salsa</h1>
   <p>Dengan memohon rahmat dan ridho Allah SWT, kami mengundang Anda untuk hadir dalam hari bahagia kami.</p>
   <button onclick="openInvitation()">Buka Undangan</button>
 </div>
@@ -143,7 +143,7 @@
 							<div class="animate-box svg-sm colored">
 								<img src="images/flaticon/svg/004-nature.svg" class="svg" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
 								<h1 class="holder"><span>The Wedding of</span></h1>
-								<h2>Nurkholis &amp; Salsa</h2>
+								<h2>Kholis &amp; Salsa</h2>
 								<p>16.08.2025</p>
 							</div>
 						</div>
@@ -181,7 +181,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 						<img src="images/groom.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
-						<h3>Nurkholis</h3>
+						<h3>Kholis</h3>
 						<span>Suami</span>
 					</div>
 					<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><img src="images/flaticon/svg/003-luxury.svg" class="svg img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com"></h2></div>
@@ -274,7 +274,7 @@
 					<div class="couple groom text-center animate-box">
 						<img src="images/groom.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by QBootstrap.com">
 						<div class="desc">
-							<h2>Nurkholis</h2>
+							<h2>Kholis</h2>
 							<p>Putra dari Bp. Darsito dan Ibu Dasilah</p>
 							<ul class="social social-circle">
 <li>
